[tool.poetry]
name = "abcon"
version = "0.1.0"
description = "Connector management CLI"
authors = ["Michel Tricot <michel@airbyte.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
isort = "^5.10.1"
pyproject-flake8 = "^0.0.1-alpha.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
