[tool.poetry]
name = "abcon-cli"
version = "0.1.0"
description = "Connector management CLI"
authors = ["Michel Tricot <michel@airbyte.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
isort = "^5.10.1"
pyproject-flake8 = "^0.0.1-alpha.5"

[tool.poetry.scripts]
abcon-cli = "abcon_cli.entrypoint:main"
format = "black ."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140
target-version = ["py39"]