[tool.poetry]
name = "ink"
version = "0.2.0"
description = "Connector management CLI"
authors = ["Michel Tricot <michel@airbyte.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
isort = "^5.10.1"
pyproject-flake8 = "^0.0.1-alpha.5"

[tool.poetry.scripts]
ink = "ink.entrypoint:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140
target-version = ["py39"]

[tool.isort]
profile = "black"
py_version = 39
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
src_paths = ["src", "tests"]

[tool.flake8]
extend-exclude = [
    ".venv",
    "build",
]
max-complexity = 20
extend-ignore = [
  "E203",  # whitespace before ':' (conflicts with Black)
  "E231",  # Bad trailing comma (conflicts with Black)
  "E501",  # line too long (conflicts with Black)
  "W503",  # line break before binary operator (conflicts with Black)
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
